--- a/style.css
+++ b/style.css
@@ -10,31 +10,35 @@ body {
   padding: 10px;
   margin-top: 10px;
   margin-left: 50px;
+  position: relative;
   width: 400px;
   height: 300px;
-  position: relative;
   z-index: 1;
   top: 5px;
   left: 5px;
 }
 
 .box2 {
+  /*box model*/
   border: 3px solid black;
   border-radius: 20px;
   background-color: deepskyblue;
+  padding: 10px;
   margin-top: 10px;
   margin-left: 50px;
-  padding: 10px;
-  top: 10px;
+
+  /*Position*/
+  position: relative;
   width: 400px;
   height: 300px;
-  position: relative;
   z-index: 2;
   top: 5px;
   left: 5px;
+
 }
 
 div {
+  /*Display*/
   display: inline-block;
 }
 h1,
