--- a/style.css
+++ b/style.css
@@ -34,9 +34,47 @@ body {
   z-index: 2;
   top: 5px;
   left: 5px;
-
 }
 
+.box3 {
+  /*box model*/
+  border: 3px solid black;
+  border-radius: 20px;
+  background-color: #6ac5ac;
+  padding: 10px;
+  margin-top: 10px;
+  margin-left: 50px;
+
+  /*Position*/
+  position: relative;
+  width: 400px;
+  height: 300px;
+  z-index: 2;
+  top: 5px;
+  left: 5px;
+}
+
+.box4 {
+  /*box model*/
+  border: 3px solid black;
+  border-radius: 20px;
+  background-color: #D64078;
+  padding: 10px;
+  margin-top: 10px;
+  margin-left: 50px;
+
+  /*Position*/
+  position: relative;
+  width: 400px;
+  height: 300px;
+  z-index: 2;
+  top: 5px;
+  left: 5px;
+}
+
+.box3 p, .box4 p {
+  color: white;
+}
 div {
   /*Display*/
   display: inline-block;
