--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   position: relative;
   width: 400px;
   height: 300px;
-  z-index: 1;
+  z-index: 2;
   top: 5px;
   left: 5px;
 }
@@ -44,11 +44,11 @@ body {
   padding: 10px;
   margin-top: 10px;
   margin-left: 50px;
+  width: 400px;
+  height: 300px;
 
   /*Position*/
   position: relative;
-  width: 400px;
-  height: 300px;
   z-index: 2;
   top: 5px;
   left: 5px;
@@ -56,18 +56,19 @@ body {
 
 .box4 {
   /*box model*/
-  border: 3px solid black;
+  border: 3px black;
+  border-style: dashed solid;
   border-radius: 20px;
   background-color: #D64078;
   padding: 10px;
   margin-top: 10px;
   margin-left: 50px;
+  width: 400px;
+  height: 300px;
 
   /*Position*/
   position: relative;
-  width: 400px;
-  height: 300px;
-  z-index: 2;
+  z-index: 1;
   top: 5px;
   left: 5px;
 }
@@ -75,10 +76,12 @@ body {
 .box3 p, .box4 p {
   color: white;
 }
+
 div {
   /*Display*/
-  display: inline-block;
+display: inline-block;
 }
+
 h1,
 p {
   font-family: helvetica, sans-serif;
