--- a/style.css
+++ b/style.css
@@ -1,24 +1,15 @@
-body {
+.content {
 
 }
 
-
-.box1 {
-  border: solid red;
-  border-radius: 20px;
-  background-color: aquamarine;
-  padding: 10px;
-  margin-top: 10px;
-  margin-left: 50px;
-  position: relative;
-  width: 400px;
-  height: 300px;
-  z-index: 1;
-  top: 5px;
-  left: 5px;
+h1 {
+  font-size: 18px;
+  font-weight: normal;
 }
-
-.box2 {
+.box1,
+.box2,
+.box3,
+.box4 {
   /*box model*/
   border: 3px solid black;
   border-radius: 20px;
@@ -29,55 +20,46 @@ body {
 
   /*Position*/
   position: relative;
-  width: 400px;
-  height: 300px;
-  z-index: 2;
+  width: 250px;
+  height: 150px;
   top: 5px;
   left: 5px;
+  overflow: hidden;
+  /*Display*/
+  display: inline-block;
 }
 
-.box3 {
-  /*box model*/
-  border: 3px solid black;
-  border-radius: 20px;
-  background-color: #6ac5ac;
-  padding: 10px;
-  margin-top: 10px;
-  margin-left: 50px;
+.box1 {
+  background-color: #b1e0af;
+  z-index: 4;
+}
+.box2 {
+  background-color: #afe0db;
+  z-index: 3;
 
-  /*Position*/
-  position: relative;
-  width: 400px;
-  height: 300px;
-  z-index: 2;
-  top: 5px;
-  left: 5px;
+}
+
+span.floatright {
+    float: right;
+}
+.box3 {
+  background-color: #466995;
+  z-index: 1;
 }
 
 .box4 {
-  /*box model*/
-  border: 3px solid black;
-  border-radius: 20px;
-  background-color: #D64078;
-  padding: 10px;
-  margin-top: 10px;
-  margin-left: 50px;
-
-  /*Position*/
-  position: relative;
-  width: 400px;
-  height: 300px;
+  background-color: rgba(210, 34, 36, 1);
   z-index: 2;
-  top: 5px;
-  left: 5px;
 }
 
-.box3 p, .box4 p {
+.box3 p,
+.box3 h1,
+.box4 p,
+.box4 h1 {
   color: white;
 }
 div {
-  /*Display*/
-  display: inline-block;
+
 }
 h1,
 p {
